<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_marginStart="130dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo_mabel"/>


    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginStart="30sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="text"
            android:hint="@string/nama_pengguna"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="3dp"
        android:backgroundTint="@color/black"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="3dp"
        android:backgroundTint="@color/black"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="#000D6B"
        android:layout_marginStart="50dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_marginTop="70dp"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_akun"
            android:layout_marginStart="80dp"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_marginStart="4dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disini"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>